# AlienSwarm

./: .gitignore  Cargo.toml
src/: game.rs  main.rs
src/systems/: health_component.rs  human.rs  mod.rs
src/systems/blocks/: air.rs  dirt.rs  mod.rs
